@@ -9,6 +9,7 @@ import com.ues.edu.apidecanatoce.exceptions.CustomException;
 import com.ues.edu.apidecanatoce.repositorys.empleado.IEmpleadoRepository;
 import com.ues.edu.apidecanatoce.repositorys.estados.IEstadosRepository;
 import com.ues.edu.apidecanatoce.repositorys.solicitudVehiculo.ISolicitudVehiculoRepository;
+import com.ues.edu.apidecanatoce.repositorys.usuario.IUsuarioRepository;
 import com.ues.edu.apidecanatoce.repositorys.vehiculo.IVehiculoRepository;
 import com.ues.edu.apidecanatoce.services.solicitudVehiculo.ISolicitudVehiculoServices;
 import lombok.RequiredArgsConstructor;
@@ -19,6 +20,8 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,6 +31,7 @@ public class SolicitudVehiculoServicesImpl implements ISolicitudVehiculoServices
     private final IEstadosRepository estadosRepository;
     private final IVehiculoRepository vehiculoRepository;
     private final IEmpleadoRepository empleadoRepository;
+    private final IUsuarioRepository usuarioRepository;
     @Override
     public SolicitudVehiculoPeticionDtO registrar(SolicitudVehiculoDto data) {
         LocalDate fechaActual = LocalDate.now();
@@ -35,7 +39,8 @@ public class SolicitudVehiculoServicesImpl implements ISolicitudVehiculoServices
         data.setEstado(1);
 
         // uniad solicitante
-        return solicitudVehiculoServices.save(data.toEntityComplete(vehiculoRepository, empleadoRepository)).toDto();
+        return solicitudVehiculoServices.save(data.toEntityComplete(vehiculoRepository, empleadoRepository,
+                usuarioRepository)).toDto();
     }
 
     @Override
@@ -48,8 +53,20 @@ public class SolicitudVehiculoServicesImpl implements ISolicitudVehiculoServices
     @Override
     public List<SolicitudVehiculoPeticionDtO> listarSinPagina() {
         List<SolicitudVehiculo> solicitudVehiculos = solicitudVehiculoServices.findAll();
-        return solicitudVehiculos.stream().map(SolicitudVehiculo::toDto).toList();
+        List<Estados> estados = estadosRepository.findAll();
+        Map<Integer, String> estadoStringMap = new HashMap<>();
+        for (Estados estado: estados) {
+            estadoStringMap.put(estado.getCodigoEstado(), estado.getNombreEstado());
+        }
+
+        return solicitudVehiculos.stream().map(solicitud -> {
+            SolicitudVehiculoPeticionDtO dto = solicitud.toDto();
+            String estadoAsString = estadoStringMap.get(solicitud.getEstado());
+            dto.setEstadoString(estadoAsString);
+            return dto;
+        }).collect(Collectors.toList());
     }
+
 
     @Override
     public Page<SolicitudVehiculoPeticionDtO> listar(Pageable pageable) {
@@ -88,10 +105,30 @@ public class SolicitudVehiculoServicesImpl implements ISolicitudVehiculoServices
     }
 
     @Override
+    public List<SolicitudVehiculoPeticionDtO> listarPorEstadoSinPagina(Integer id) {
+        List<SolicitudVehiculo> listSoliVe = solicitudVehiculoServices.findAllByEstado(id);
+
+        List<Estados> estados = estadosRepository.findAll();
+
+        Map<Integer, String> estadoStringMap = new HashMap<>();
+        for (Estados estado: estados) {
+            estadoStringMap.put(estado.getCodigoEstado(), estado.getNombreEstado());
+        }
+
+        return listSoliVe.stream().map(solicitud -> {
+            SolicitudVehiculoPeticionDtO dto = solicitud.toDto();
+            String estadoAsString = estadoStringMap.get(solicitud.getEstado());
+            dto.setEstadoString(estadoAsString);
+            return dto;
+        }).collect(Collectors.toList());
+    }
+
+    @Override
     public SolicitudVehiculoPeticionDtO modificar(UUID codigoSolicitudVehiculo, SolicitudVehiculoDto data) {
         ///SolicitudVehiculoPeticionDtO buscarSoliVe = leerPorId(codigoSolicitudVehiculo);
         data.setCodigoSolicitudVehiculo(codigoSolicitudVehiculo);
-        return solicitudVehiculoServices.save(data.toEntityComplete(vehiculoRepository, empleadoRepository)).toDto();
+        return solicitudVehiculoServices.save(data.toEntityComplete(vehiculoRepository, empleadoRepository,
+                usuarioRepository)).toDto();
     }
 
     @Override
